CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.23rc1

	- The hpgltops filter contained two buffer overflows
	  that could potentially allow remote access to the "lp"
	  account (STR #1024)
	- The lppasswd command did not protect against file
	  descriptor or ulimit attacks (STR #1023)
	- The "lpc status" command used the wrong resource path
	  when querying the list of printers and jobs, causing
	  unnecessary authentication requests (STR #1018)
	- The httpWait() function did not handle signal
	  interruptions (STR #1020)
	- The USB backend used the wrong size status variable
	  when checking the printer status (STR #1017)
	- The scheduler did not delete classes from other
	  classes or implicit classes, which could cause a crash
	  (STR #1015)
	- The IPP backend now logs the remote print job ID at
	  log level NOTICE instead of INFO (so it shows up in
	  the error_log file...)


CHANGES IN CUPS V1.1.22

	- The lpstat man page incorrectly listed the "-s" option
	  as using the equivalent of the "-p" option to list the
	  printers; it uses the "-v" option to list the printers
	  (STR #986)
	- Now allow 0-length reads in the CUPS file API (STR
	  #985)
	- cupsDoFileRequest() now sets cupsLastError() to
	  IPP_ERROR on network errors (STR #953)
	- The pdftops filter didn't scale small pages up to the
	  output page size when the fitplot option was used (STR
	  #984)
	- Fixed the ipptest program usage message (STR #959)
	- Added Spanish man pages (STR #963)
	- Fixed the order of comparisons in the client.conf
	  reading code (STR #971)
	- cupsLangGet() incorrectly set the current locale (STR
	  #970)


CHANGES IN CUPS V1.1.22rc2

	- The pdftops filter didn't check the range of all
	  integer attributes (STR #972)
	- Documentation corrections (STR #944, STR #946)
	- Also sanitize device URI in argv[0] (STR #933)
	- cupsRasterReadHeader() didn't swap bytes for the
	  numeric fields properly (STR #930)


CHANGES IN CUPS V1.1.22rc1
